--- a/index.html
+++ b/index.html
@@ -314,7 +314,6 @@
         .modal-year { color: var(--accent-deep); font-weight: 700; margin-bottom: 0.5rem; display: block;}
         .modal-title { font-size: 2.5rem; font-family: 'Space Grotesk'; margin-bottom: 1.5rem; line-height: 1.1; }
         .modal-quote {
-            border-left: 3px solid var(--accent-agent);
             padding-left: 1.5rem;
             font-style: italic;
             color: #ddd;
@@ -444,7 +443,7 @@
             // ERA 5: REASONING (2025) - THE SPECIFIC REQUESTS
             { 
                 era: 5, year: "Jan 2025", title: "DeepSeek-R1", 
-                img: "https://images.unsplash.com/photo-1620712943543-bcc4688e7485?q=80&w=800&auto=format&fit=crop", 
+                img: "https://images.unsplash.com/photo-1555066931-4365a22eed35?q=80&w=800&auto=format&fit=crop", 
                 desc: "DeepSeek shocks the industry by releasing R1, an open-source reasoning model that rivals proprietary giants at a fraction of the training cost. It introduces 'Chain of Thought' verification at scale.", 
                 quote: "Open source just closed the gap.", 
                 stats: ["License: MIT/Apache", "Benchmark: MATH 92%", "Training Cost: <$5M"], 
@@ -463,7 +462,7 @@
                 img: "https://images.unsplash.com/photo-1591453089816-0fbb971b454c?q=80&w=800&auto=format&fit=crop", 
                 desc: "Google strikes back with Gemini 2.5. It integrates deeply into the Android OS, allowing for 'Agentic Action'—booking flights and replying to emails autonomously.", 
                 quote: "The assistant that actually assists.", 
-                stats: ["Context Window: 10 Million", "Integration: OS Level", "Modality: Native Native"], 
+                stats: ["Context Window: 10 Million", "Integration: OS Level", "Modality: Native Multimodal"], 
                 link: "#" 
             },
             { 
@@ -529,7 +528,7 @@
                             <p class="card-summary">${evt.desc}</p>
                         </div>
                         <div class="card-footer">
-                            <i class="fa-solid fa-arrow-right-long"></i> Read more
+                            <i class="fa-solid fa-arrow-right-long"></i> <span class="btn-read">Read more</span>
                         </div>
                     </div>
                 `;
@@ -696,7 +695,13 @@
             data.stats.forEach(stat => {
                 const div = document.createElement('div');
                 div.className = 'stat-item';
-                div.innerHTML = `<i class="fa-solid fa-bolt"></i> <span class="stat-text">${stat}</span>`;
+                const lowerStat = stat.toLowerCase();
+                let iconClass = 'fa-bolt';
+                if (lowerStat.includes('cost') || lowerStat.includes('price')) iconClass = 'fa-dollar-sign';
+                else if (lowerStat.includes('param') || lowerStat.includes('parameters')) iconClass = 'fa-cogs';
+                else if (lowerStat.includes('impact') || lowerStat.includes('effect')) iconClass = 'fa-chart-line';
+                else if (lowerStat.includes('speed') || lowerStat.includes('fast')) iconClass = 'fa-bolt';
+                div.innerHTML = `<i class="fa-solid ${iconClass}"></i> <span class="stat-text">${stat}</span>`;
                 modalStats.appendChild(div);
             });
             
@@ -704,7 +709,7 @@
             const eraName = document.querySelector(`[data-index="${index}"]`).closest('.era-section').dataset.era;
             const eraColor = `var(--accent-${eraName})`;
             modalYear.style.color = eraColor;
-            modalQuote.style.borderColor = eraColor;
+            modalQuote.style.borderLeftColor = eraColor;
             modalLink.style.color = eraColor;
 
             // Show
@@ -733,8 +738,10 @@
                     card.style.opacity = "1";
                     card.style.filter = "none";
                 } else if (match) {
+                    const eraName = card.closest('.era-section').dataset.era;
+                    const eraColor = getComputedStyle(document.documentElement).getPropertyValue(`--accent-${eraName}`).trim();
                     card.style.opacity = "1";
-                    card.style.filter = "brightness(1.2) drop-shadow(0 0 10px var(--accent-deep))";
+                    card.style.filter = `brightness(1.2) drop-shadow(0 0 10px ${eraColor})`;
                 } else {
                     card.style.opacity = "0.2";
                     card.style.filter = "grayscale(1)";
